# ghostprovider

./: LICENSE  PKGBUILD  README.md  pyproject.toml
docs/: index.html
ghostprovider/: app.py  hoster.py  installer.py  screens.py  services.py
tests/: test_analysis.py
