[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostprovider"
version = "1.0.0"
description = "TUI for self-hosting & localhost management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.41.0",
    "requests>=2.28.0",
]

[project.scripts]
ghostprovider = "ghostprovider.__main__:run"

[tool.setuptools.packages.find]
include = ["ghostprovider*"]
